assets/styles.scss
/* ... */
.post-listing {
  .post {
    display: block;
    text-decoration: none;
    color: var(--gray);;

    margin: 18pt 0 0 -8pt;
    &:first-of-type {
      margin-top: 0;
    }

    padding-left: 6pt;
    border-left: 2pt solid var(--white);
    &:hover {
      border-left-color: var(--red);
    }

    h3 {
      font: normal 16pt/21pt Sen;
      margin: 0;
      padding: 0;
    }
    &:link {
      h3 {
        color: #0000EE;
      }
    }
    &:visited {
      h3 {
        color: #551A8B;
      }
    }

    .excerpt {
      display: block;
      font: normal 10pt/14pt Sen;
    }
  }
}

.clear {
  clear: both;
}

header {
  h3 {
    font: normal 16pt/21pt Sen;
    margin: 3pt 0 0;
    color: var(--gray);
  }
}

article {
  position: relative;
  max-width: 7in;
  min-height: 80vh;
  text-align: left;
  background: var(--white);
  border: 1px solid var(--black);
  box-shadow: 0px 5px 5px var(--black);
  margin: 72pt auto 29pt;
  padding: 72pt;

  a.up {
    display: block;
    text-align: center;
    text-decoration: none;
    margin: 0 auto 72pt;
    width: 54pt;
    height: 54pt;
    img {
      padding: 0;
      width: 100%;
    }
    &:hover {
      img {
        transform: rotate(-3deg);
        transform-origin: 2% 98%;
      }
    }
  }

  .meta {
    font: normal 10pt/14pt Sen;
    margin: 6pt 0 18pt;
    color: var(--gray);;
    a {
      color: var(--gray);;
    }
  }
  .tldr {
    color: var(--white);
    font-size: 12pt;
    line-height: 16pt;
    background: var(--gold);
    padding: 6pt 6pt 6pt 36pt;
    border-radius: 6pt;
    position: relative;
    img {
      border-radius: 3pt;
      display: block;
      position: absolute;
      left: 6pt;
      top: 6pt;
      height: 16pt;
    }
  }

  section {
    position: relative;
    margin: 24pt 0 0;

    h2 {
      font: bold 21pt/24pt Sen;
      margin-bottom: 3pt;
    }
    h3 {
      font: normal 16pt/21pt Sen;
      margin: 24pt 0 9pt;
      padding: 2pt 0 2pt;
      color: var(--gray);;
      &.subtitle {
        margin-top: 0;
      }
    }
    h4 {
      font: bold 12pt/17pt Sen;
      margin: 18pt 0 6pt;
    }
    h3 + h4 {
      margin-top: 0
    }

    h3 + p,
    div + p,
    hr + p {
        text-indent: 0;
    }
    p {
      text-indent: 18pt;
      &:first-of-type {
        text-indent: 0;
      }
    }
    sup {
      font: normal 9pt/14pt Sen;
    }
    p.note {
      text-indent: -0.8em;
      font: normal 9pt/14pt Sen;
      margin: 12pt 0 12pt 18pt;
    }

    blockquote {
      margin: 12pt 0 12pt 18pt;
      &.praise {
        margin: 0;
        clear: both;
        text-indent: -5pt;
        padding: 0 0 12pt;
        cite {
          text-decoration: none;
          display: block;
          font: normal 9pt/12pt Sen;
          padding: 3pt 0 3pt 9pt;
          text-indent: -9pt;
          &::before {
            content: "—";
          }
        }
        &:last-of-type {
          padding-bottom: 0;
          cite {
            padding-bottom: 0;
          }
        }
      }
    }
    blockquote + p {
      text-indent: 0;
    }

    img {
      margin: 12pt auto 0;
      display: block;
      max-width: 100%;
    }
    .caption {
      font: normal 10pt/14pt Sen;
      color: var(--gray);;
      margin: 6pt 0 0;
      a {
        color: inherit;
      }
    }

    h5 + .caption {
      /* for The Faithful Servants index */
      margin: 0;
    }

    ol {
      margin: 12pt 0 12pt 18pt;
      li {
        margin-bottom: 6pt;
        &:last-of-type {
          margin-bottom: 0;
        }
      }
    }

    hr {
      border: 0;
      margin: 12pt 0 12pt 49%;
      &::before {
        content: "✚";
        color: var(--gray);;
      }
    }

    button {
      background: var(--red);;
      color: var(--white);;
      font: 12pt/18pt Sen;
      padding: 3pt 12pt;
      border: 1px solid var(--red);;
      border-radius: 4px;
      margin: 0;
      cursor: pointer;
    }

    img.social-icon {
      display: inline-block;
      width: 21pt;
      margin: 0 4pt -6pt 0;
      padding: 0;
    }

    .amazon.available-at {
      display: block;
      position: absolute;
      top: -68pt;
      right: 0;
      width: 72pt;
      img {
        margin-top: 0;
        width: 100%;
      }
    }
    &.card .amazon.available-at {
      top: 12pt;
      right: 18pt;
    }
    .buy-at {
      display: block;
      margin: 12pt 0 0;
    }
    .half {
      width: 48%;
      float: left;
      margin-right: 4%;
      &:nth-of-type(2) {
        margin-right: 0;
      }
    }

    .youtube {
      /* https://www.w3schools.com/howto/howto_css_aspect_ratio.asp */
      &.aspect-ratio-16-9 { padding-top: 56.25%; }

      width: 100%;
      position: relative;

      .youtube-inner {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;

        iframe {
          width: 100%;
          height: 100%;
        }
      }
    }

    .read-more {
      float: right;
      color: var(--red);;
      margin-top: 6pt;
      padding: 3pt 6pt;
      &:hover {
        background: var(--pink);;
        color: var(--black);;
      }
    }
  }
}

footer {
  font-size: 12pt;
  line-height: 24pt;
  text-align: center;
  margin: 0 auto 29pt;
  color: var(--white);
  a {
    color: var(--white);
  }

  form {
    text-align: center;
    margin: 12pt 0;

    input {
      font: 12pt/18pt Sen;
      padding: 3pt 12pt;
    }

    button {
      background: var(--gold);;
      color: var(--white);;
      font: 12pt/18pt Sen;
      padding: 3pt 12pt;
      border: 1px solid var(--white);;
      border-radius: 4px;
      margin: 6pt 0 0 3pt;
      cursor: pointer;
    }
    .powered-by {
      font-size: 10pt;
    }
  }
}
/* ... */

